Criação pasta css e adição do jquery

--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orlando Pride</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
+        <header class="">
+
+            <div class="container">
+
+                <div class="row">
+            </div>
+
+        </header>
 
     <script type="bootstrap/js/bootstrap.min.js"></script>
+    <script type="lib/jquery/jquery.min.js"></script>
 </body>
 </html>
