--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orlando Pride</title>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/orlando.css">
 </head>
 <body>
-        <header class="">
+        <header>
 
             <div class="container">
 
                 <div class="row">
+                    Orlando
+                </div>
             </div>
 
         </header>
