posicionamento da logo e criando novo container

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 </div>
             </div>
 
+            <div class="container">
+                <img id="logotipo" src="img/orlando-pride-logo.png" alt="Logotipo">
+            </div>
+
         </header>
 
     <script type="bootstrap/js/bootstrap.min.js"></script>
