alinhamento dos times no header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
             <div class="header-black">
                 <div class="container">
-                    <ul>
-                        <li></li>
+                    <ul class="float-md-end">
+                        <li class="club-01"><a href="#"></a></li>
+                        <li class="club-02"><a href="#"></a></li>
                     </ul>
                 </div>
             </div>
