Alteração logotipo e alinhamento

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orlando Pride</title>
+    <title>Orlando City</title>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/orlando.css">
 </head>
@@ -48,7 +48,7 @@
             </div>
 
             <div class="container">
-                <img id="logotipo" src="img/orlando-pride-logo.png" alt="Logotipo">
+                <img id="logotipo" src="img/orlando-city-logo.png" alt="Logotipo" width="150em">
             </div>
 
         </header>
