header alinhamento links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Orlando City</title>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/orlando.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
         <header>
@@ -43,7 +46,16 @@
             <div class="container">
 
                 <div class="row">
-                    
+                    <nav id ="menu">
+                        <ul class="float-md-end">
+                            <a href="#">Ingressos</a>
+                            <a href="#">Notícias</a>
+                            <a href="#">Cronograma</a>
+                            <a>
+                                <input type="search" placeholder="Digite para pesquisar..." name="search" id="search">
+                            </a>
+                        </ul>
+                    </nav>
                 </div>
             </div>
 
