--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
         <header>
 
+            <div class="container">
+                <img id="logotipo" src="img/orlando-city-logo.png" alt="Logotipo" width="150em">
+            </div>
+
             <div class="header-black">
                 <div class="container">
                     <ul class="float-md-end">
@@ -51,17 +55,15 @@
                             <a href="#">Ingressos</a>
                             <a href="#">Notícias</a>
                             <a href="#">Cronograma</a>
-                            <a>
+                            <a class="search"> 
                                 <input type="search" placeholder="Digite para pesquisar..." name="search" id="search">
+                                <button class="btn btn-primary" type="button" id="search">Pesquisar</button>
                             </a>
                         </ul>
                     </nav>
                 </div>
             </div>
 
-            <div class="container">
-                <img id="logotipo" src="img/orlando-city-logo.png" alt="Logotipo" width="150em">
-            </div>
 
         </header>
 
