--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a href="#">Cronograma</a>
                             <a class="search"> 
                                 <input type="search" placeholder="Digite para pesquisar..." name="search" id="search">
-                                <button class="btn btn-primary" type="button" id="search">Pesquisar</button>
+                                <button class="btn" type="button" id="search">Pesquisar</button>
                             </a>
                         </ul>
                     </nav>
