--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/68437dc401.js" crossorigin="anonymous" defer></script>
+    
 </head>
 <body>
         <header>
@@ -57,7 +59,7 @@
                             <a href="#">Cronograma</a>
                             <a class="search"> 
                                 <input type="search" placeholder="Digite para pesquisar..." name="search" id="search">
-                                <button class="btn" type="button" id="search-btn">Pesquisar</button>
+                                <button class="btn" type="button" id="search-btn"><i class="fas fa-search"></i></button>
                             </a>
                         </ul>
                     </nav>
