Ajustando background e opacidade header

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 
         </header>
 
+        <section>
+            <div id="banner"></div>
+
+        </section>
+
     <script type="bootstrap/js/bootstrap.min.js"></script>
     <script type="lib/jquery/jquery.min.js"></script>
 </body>
