--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
         </header>
 
         <section>
-            <div id="banner"></div>
+            <div id="banner">
+                <h1>Orlando City</h1>
+                <small>Orlando City Soccer Club</small>
+            </div>
 
         </section>
 
