--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
 
         </section>
 
+        <section>
+            
+        </section>
+
     <script type="bootstrap/js/bootstrap.min.js"></script>
     <script type="lib/jquery/jquery.min.js"></script>
 </body>
