--- a/index.html
+++ b/index.html
@@ -77,9 +77,35 @@
 
         </section>
 
-        <section>
+        <div id="news" class="row">
+
+            <div class="row">
+                <h2>Últimas notícias</h2>
+                <hr>
+            </div>
+
+            <div class="row-thumbnails">            
             
-        </section>
+                <div class="noticia-1">
+                    <img src="/img/noticia-thumb.jpg">
+                    <h3>Orlando City contrata novo goleiro da Europa</h3>
+                </div>
+
+                <div class="noticia-2">
+                    <img src="/img/kaka-city.jpg">
+                </div>
+
+                <div class="noticia-3">
+                    <img src="/img/.jpg">
+                </div>
+
+                <div class="noticia-4">
+                    <img src="/img/noticia-thumb.jpg">
+                </div>
+
+            </div>
+
+        </div>
 
     <script type="bootstrap/js/bootstrap.min.js"></script>
     <script type="lib/jquery/jquery.min.js"></script>
