--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                 </div>
 
                 <div class="noticia-3">
-                    <img src="/img/.jpg">
+                    <img src="/img/sao-paulo.jpg">
                 </div>
 
                 <div class="noticia-4">
-                    <img src="/img/noticia-thumb.jpg">
+                    <img src="/img/treinadores-city.jpg">
                 </div>
 
             </div>
