Ajustando responsividade com display flex

--- a/index.html
+++ b/index.html
@@ -87,20 +87,23 @@
             <div class="row-thumbnails">            
             
                 <div class="noticia-1">
-                    <img src="/img/noticia-thumb.jpg">
+                    <img src="/img/noticia-thumb.jpg" width="280px">
                     <h3>Orlando City contrata novo goleiro da Europa</h3>
                 </div>
 
                 <div class="noticia-2">
-                    <img src="/img/kaka-city.jpg">
+                    <img src="/img/kaka-city.jpg" width="280px">
+                    <h3>Kaka pode encerrar sua carreira e sair do city ainda esse ano</h3>
                 </div>
 
                 <div class="noticia-3">
-                    <img src="/img/sao-paulo.jpg">
+                    <img src="/img/sao-paulo.jpg" width="280px">
+                    <h3>Jogador do Orlando city foi oferecido ao São Paulo</h3>
                 </div>
 
                 <div class="noticia-4">
-                    <img src="/img/treinadores-city.jpg">
+                    <img src="/img/treinadores-city.jpg" width="280px">
+                    <h3>O treinador do orlando city pode abandonar o clube para treinar gigante Brasileiro</h3>
                 </div>
 
             </div>
