--- a/index.html
+++ b/index.html
@@ -89,21 +89,25 @@
                 <div class="noticia-1">
                     <img src="/img/noticia-thumb.jpg" width="280px">
                     <h3>Orlando City contrata novo goleiro da Europa</h3>
+                    <time>October 01, 2021</time>
                 </div>
 
                 <div class="noticia-2">
                     <img src="/img/kaka-city.jpg" width="280px">
-                    <h3>Kaka pode encerrar sua carreira e sair do city ainda esse ano</h3>
+                    <h3>Kaka pode encerrar sua carreira e sair do city ainda esse ano.</h3>
+                    <time>September 08, 2021</time>
                 </div>
 
                 <div class="noticia-3">
                     <img src="/img/sao-paulo.jpg" width="280px">
-                    <h3>Jogador do Orlando city foi oferecido ao São Paulo</h3>
+                    <h3>Jogador do Orlando city foi oferecido ao São Paulo.</h3>
+                    <time>September 18, 2021</time>
                 </div>
 
                 <div class="noticia-4">
                     <img src="/img/treinadores-city.jpg" width="280px">
-                    <h3>O treinador do orlando city pode abandonar o clube para treinar gigante Brasileiro</h3>
+                    <h3>O treinador do orlando city pode abandonar o clube para treinar gigante Brasileiro.</h3>
+                    <time>September 30, 2021</time>
                 </div>
 
             </div>
