Ajustando nav bar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <div class="row">
                     <nav id ="menu">
-                        <ul>
+                        <ul class="float-md-end">
                             <a href="#">Ingressos</a>
                             <a href="#">Notícias</a>
                             <a href="#">Cronograma</a>
