--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
 
             </div>
         </section>
+
+        <footer>
+            <div class="container">
+                <div>
+                    <h4>Capacidade do estádio: 61348</h4>
+                    <h4>Fundação: 2010</h4>
+                </div>
+                <div>
+                    
+                    
+                </div>
+            </div>
+        </footer>
     <script type="bootstrap/js/bootstrap.min.js"></script>
     <script type="lib/jquery/jquery.min.js"></script>
 </body>
